break on really long words to avoid going out of div
that shit was ugly

--- a/static/CSS/style.css
+++ b/static/CSS/style.css
@@ -43,6 +43,7 @@
   bottom: 1%;
   padding: 10px 20px;
   border-radius: 20px;
+  overflow-wrap: break-word;
   background-color: lightblue;
   max-width: 50%;
 }
